# rest_rpc_old

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  client_base.hpp  client_proxy.hpp  client_proxy.sln  client_proxy.vcxproj  common.h  connection.hpp  consts.h  function_traits.hpp  io_service_pool.hpp  json_hex16.h  log.hpp  main.cpp  noncopyable.h  protocol.hpp  restrpc.sln  restrpc.vcxproj  router.hpp  server.cfg  server.hpp  token_parser.hpp  unit_test.hpp  utils.hpp
client_proxy/: CMakeLists.txt  async_client.hpp  async_client_ex.hpp  base64.hpp  client_base.hpp  client_proxy.hpp  client_proxy.vcxproj  main.cpp
example/async_client_example/: CMakeLists.txt  async_client_example.cpp
example/bench_client/: CMakeLists.txt  bench_client.cpp
example/bench_server/: CMakeLists.txt  bench_server.cpp
example/pub_sub_example/: CMakeLists.txt  pub_client_example.cpp  sub_client_example.cpp
example/server_example/: CMakeLists.txt  server_example.cpp
example/sync_client_example/: CMakeLists.txt  client.cfg  sync_client_example.cpp  unified_client.hpp
example/timax_bind/: timax_bind.cpp
msvc/: rest_examples.props  rest_rpc.sln
msvc/async_client_example/: async_client_example.vcxproj  async_client_example.vcxproj.filters
msvc/bench_client/: bench_client.vcxproj  bench_client.vcxproj.filters
msvc/bench_server/: bench_server.vcxproj  bench_server.vcxproj.filters
msvc/pub_client_example/: pub_client_example.vcxproj  pub_client_example.vcxproj.filters
msvc/rest_rpc/: ReadMe.txt  rest_rpc.vcxproj  rest_rpc.vcxproj.filters
msvc/server_example/: server_example.vcxproj  server_example.vcxproj.filters
msvc/sub_client_example/: sub_client_example.vcxproj  sub_client_example.vcxproj.filters
msvc/sync_client_example/: sync_client_example.vcxproj  sync_client_example.vcxproj.filters
msvc/timax_bind/: timax_bind.vcxproj  timax_bind.vcxproj.filters
rest_rpc/: client.hpp  forward.hpp  server.hpp
rest_rpc/base/: bin_escape.h  codec.hpp  common.h  consts.h  excetion.hpp  function_traits.hpp  log.hpp  utils.hpp
rest_rpc/client/: async_client.hpp  async_client_detail.hpp  client_base.hpp  protocol.hpp  sync_client.hpp
rest_rpc/client/detail/: async_connection.hpp  async_rpc_context.hpp  async_rpc_session.hpp  async_rpc_session_impl.hpp  async_sub_session.hpp  connection.hpp  wait_barrier.hpp
rest_rpc/server/: connection.hpp  connection_impl.hpp  context.hpp  io_service_pool.hpp  ios_wrapper.hpp  router.hpp  server.hpp  token_parser.hpp
